--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
     - 3.4
 
 install:
-    - pip install -r requirements/testing.txt
+    - pip install -r requirements/development.txt
     - pip install coveralls
 
 script:
