added status badge, fixed setup travis bugs

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
     - pip install coveralls
 
 script:
-    nosetests --with-coverage -w tests/
+    coverage run --source=fadapa setup.py test
 
 after_success:
     coveralls
